BK Commit - Portfolio navigation updated

--- a/BingoTheGame.html
+++ b/BingoTheGame.html
@@ -51,16 +51,16 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="assets/img/portfolio/bingoSlider1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="assets/img/portfolio/bingoSlider2.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
-                </div>
+                <!-- <div class="swiper-slide">
+                  <img src="assets/img/portfolio/bingoSlider1.jpg" alt="">
+                </div> -->
 
               </div>
               <div class="swiper-pagination"></div>
@@ -69,13 +69,13 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project TITLE</h3>
+              <h3>Bingo The Game</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
+                <li><strong>Category</strong>: iOS App</li>
                 <!-- <li><strong>Client</strong>: ASU Company</li> -->
                 <!-- <li><strong>Project date</strong>: 01 March, 2020</li> -->
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
-                <li class="d-flex justify-content-center"><img src="images/qr.png" alt="" srcset="" height="200" width="200" ></li>
+                <li><strong>Project URL</strong>: <a href="https://apps.apple.com/sk/app/bingo-the-game/id1296546962" target="_blank">Click Here</a></li>
+                <li class="d-flex justify-content-center"><img src="images/qr-bingo.jpg" alt="" srcset="" height="200" width="200" ></li>
               </ul>
             </div>
             <!-- <div class="portfolio-description">
@@ -88,9 +88,13 @@
 
           <div class="portfolio-description col-lg-12">
             <h2>Project Summary</h2>
-            <p>
-              Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-            </p>
+            <ul>
+              <li>Player Must Connected With Bluetooth Or Wifi Connectivity From The Application</li>
+              <li>After Connection Game Will Start And Players Can Play Turn By Turn</li>
+              <li>Score Of Player Display On The Screen</li>
+              <li>Player Can Restart The Game</li>
+              <li>Can Turn ON/OFF Audio Sound</li>
+            </ul>
           </div>
 
         </div>
