--- a/PracticeChecker.html
+++ b/PracticeChecker.html
@@ -51,16 +51,16 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="assets/img/portfolio/practicecheckerSlider1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="assets/img/portfolio/practicecheckerSlider2.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
-                </div>
+                <!-- <div class="swiper-slide">
+                  <img src="assets/img/portfolio/practicecheckerSlider1.jpg" alt="">
+                </div> -->
 
               </div>
               <div class="swiper-pagination"></div>
@@ -69,13 +69,13 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>SECOND PROJECT</h3>
+              <h3>Practice Checker</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
+                <li><strong>Category</strong>: iOS App</li>
                 <!-- <li><strong>Client</strong>: ASU Company</li> -->
                 <!-- <li><strong>Project date</strong>: 01 March, 2020</li> -->
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
-                <li class="d-flex justify-content-center"><img src="images/qr.png" alt="" srcset="" height="200" width="200" ></li>
+                <li><strong>Project URL</strong>: <a href="https://apps.apple.com/us/app/practicechecker/id1480430345" target="_blank">Click Here</a></li>
+                <li class="d-flex justify-content-center"><img src="images/qr-practiceChecker.jpg" alt="" srcset="" height="200" width="200" ></li>
               </ul>
             </div>
             <!-- <div class="portfolio-description">
@@ -88,9 +88,11 @@
 
           <div class="portfolio-description col-lg-12">
             <h2>Project Summary</h2>
-            <p>
-              Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-            </p>
+            <ul>
+              <li>Parents can track their’s child data for tacking the musical instrument practice</li>
+              <li>Parents can analyse the weekly practice report</li>
+              <li>Use the firebase for login and retrieve the data of child</li>
+            </ul>
           </div>
 
         </div>
