Bk Commit - iPad image added for details

--- a/Shop-N-ShipBD.html
+++ b/Shop-N-ShipBD.html
@@ -58,9 +58,9 @@
                   <img src="assets/img/portfolio/shopNShipSlider2.jpg" alt="">
                 </div>
 
-                <!-- <div class="swiper-slide">
-                  <img src="assets/img/portfolio/shopNShipSlider1.jpg" alt="">
-                </div> -->
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/shopNShipSlider3.jpg" alt="">
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
