--- a/TextOnArt.html
+++ b/TextOnArt.html
@@ -58,9 +58,9 @@
                   <img src="assets/img/portfolio/textOnArtSlider2.jpg" alt="">
                 </div>
 
-                <!-- <div class="swiper-slide">
-                  <img src="assets/img/portfolio/textOnArtSlider1.jpg" alt="">
-                </div> -->
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/textOnArtSlider3.jpg" alt="">
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
