--- a/PracticeChecker.html
+++ b/PracticeChecker.html
@@ -69,7 +69,7 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Practice Checker</h3>
+              <h3>Practice Checkeras</h3>
               <ul>
                 <li><strong>Category</strong>: iOS App</li>
                 <!-- <li><strong>Client</strong>: ASU Company</li> -->
