--- a/PracticeChecker.html
+++ b/PracticeChecker.html
@@ -51,11 +51,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/practicecheckerSlider11.jpg" alt="">
+                  <img src="assets/img/portfolio/pcSlider1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/practicecheckerSlider22.jpg" alt="">
+                  <img src="assets/img/portfolio/pcSlider2.jpg" alt="">
                 </div>
 
                 <!-- <div class="swiper-slide">
@@ -69,7 +69,7 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Practice Checkeras</h3>
+              <h3>Practice Checker</h3>
               <ul>
                 <li><strong>Category</strong>: iOS App</li>
                 <!-- <li><strong>Client</strong>: ASU Company</li> -->
