--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
 	
     <link rel="stylesheet" href="css/style.css">
+
+	<link rel="icon" type="image/x-icon" href="assets/img/portfolio/apple.png">
+
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
